# rag-core

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: __init__.py  corpus_lifecycle.py  minimal_app.py  pdf_ocr_path.py
src/rag_core/: __init__.py  __main__.py  cli.py  core.py  core_file_io.py  core_lifecycle.py  core_manifest.py  core_models.py  core_prepare.py  core_runtime.py  core_sidecar.py  demo.py
src/rag_core/config/: __init__.py  env_access.py
src/rag_core/documents/: __init__.py  contextual_retriever.py  local_parse.py  ocr.py  pdf_inspector.py  pdf_text_quality.py
src/rag_core/documents/chunking/: __init__.py  code.py  markdown.py  protocol.py  router.py  semantic.py
src/rag_core/documents/converters/: __init__.py  base.py  code_converter.py  csv_converter.py  docx_converter.py  html_converter.py  image_converter.py  json_converter.py  pdf_converter.py  pdf_converter_extraction.py  pdf_converter_inspector.py  pptx_converter.py  registry_loader.py  registry_maps.py  registry_specs.py  text_converter.py  xlsx_converter.py  xml_converter.py
src/rag_core/documents/ocr_commands/: __init__.py  gemini.py  mistral.py
src/rag_core/search/: __init__.py  chunking.py  indexer.py  indexer_embeddings.py  indexer_models.py  indexer_points.py  lexical_sidecar.py  result_payload.py  searcher.py  text_builder.py  types.py
src/rag_core/search/providers/: __init__.py  embedding.py  embedding_models.py  reranker.py  sparse.py  vector_store.py  vector_store_runtime.py  vector_store_search.py  vector_store_shared.py  vector_store_write.py  voyage.py  zeroentropy.py
tests/: support.py  test_cli.py  test_core_lifecycle.py  test_env_access.py  test_examples.py  test_indexer_behavior.py  test_local_smoke.py  test_optional_fallbacks.py  test_pdf_routing.py  test_public_contracts.py  test_search_orchestrator.py
